[package]
name = "rtest"
version = "0.1.0"
authors = ["Harry Sungod <harrysungod@gmail.com>"]
edition = "2018"
default-run = "rtest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0", features = ["json", "blocking"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.53"
regex = "1.3.7"
deno_core = "0.46.0"
clap = "2.33.1"
tokio = { version = "0.2", features = ["rt-core", "macros", "rt-threaded"] }
log = "0.4.8"
derive_deref = "1.1.0"
futures = "0.3.5"
flatbuffers = "0.6.1"
hyper = "0.13.6"